welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:41: error: illegal start of simple expression
    }
    ^